完成tree Shaking的解释tree Shaking和sideEffects 将函数调用标记为无副作用 压缩输出结果 学习以及文档编写

--- a/24-webpack中使用TreeShaking对未引用的代码进行打包筛选/package.json
+++ b/24-webpack中使用TreeShaking对未引用的代码进行打包筛选/package.json
@@ -10,5 +10,12 @@
     "dev": "webpack serve --open"
   },
   "author": "w19165802736@163.com",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.3",
+    "webpack": "^5.89.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
+  }
 }
