--- a/28-webpack懒加载示例/package.json
+++ b/28-webpack懒加载示例/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "html-webpack-plugin": "^5.5.3",
+    "lodash": "^4.17.21",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
