--- a/30-Shimming 预置全局变量示例/package.json
+++ b/30-Shimming 预置全局变量示例/package.json
@@ -5,12 +5,13 @@
   "main": "./src/index.js",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve --open"
+    "dev": "webpack serve"
   },
   "author": "wangzhiyu <w19165802736@163.com>",
   "license": "MIT",
   "dependencies": {
     "html-webpack-plugin": "^5.5.3",
+    "imports-loader": "^4.0.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
