--- a/30-Shimming 预置依赖示例/package.json
+++ b/30-Shimming 预置依赖示例/package.json
@@ -10,11 +10,13 @@
   "author": "wangzhiyu <w19165802736@163.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "exports-loader": "^4.0.0",
     "html-webpack-plugin": "^5.5.3",
     "imports-loader": "^4.0.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "whatwg-fetch": "^3.6.19"
   }
 }
