--- a/37-inline资源操作/package.json
+++ b/37-inline资源操作/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "html-webpack-plugin": "^5.5.3",
+    "mini-svg-data-uri": "^1.4.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
